aws/cloudformation/codedeploy.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
        "keyname": {
            "Type": "String"
        },
        "AmiId": {
            "Type": "String",
            "Default": ""
        },
        "NameTag": {
            "Type": "String",
            "Default": "App-Host"
        },
        "webappbucket": {
            "Type": "String"
        }
    },
    "Resources": {
        "ec2instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": {
                    "Ref": "AmiId"
                },
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "keyname"
                },
                "SubnetId": {
                    "Fn::ImportValue": "csye6225-cloud-Networking-web-subnet"
                },
                "IamInstanceProfile": "CodeDeployEC2ServiceRoleProfile",
                "SecurityGroupIds": [
                    {
                        "Ref": "webappsecuritygroup"
                    }
                ],
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda1",
                        "Ebs": {
                            "VolumeSize": 20,
                            "DeleteOnTermination": "true",
                            "VolumeType": "gp2"
                        }
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "NameTag"
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe \n",
                                "sudo service codedeploy-agent start \n",
                                "sudo echo username=dbuser >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export username >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo password=csye6225password >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export password >> /etc/profile.d/envvariable.sh \n",
                                {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "echo awsRDS=jdbc:mysql://",
                                            {
                                                "Fn::GetAtt": [
                                                    "rdsinstance",
                                                    "Endpoint.Address"
                                                ]
                                            },
                                            ":3306/csye6225 >> /etc/profile.d/envvariable.sh \n"
                                        ]
                                    ]
                                },
                                {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "sudo echo bucketName=",
                                            {
                                                "Ref": "webappbucket"
                                            },
                                            ">> /etc/profile.d/envvariable.sh \n"
                                        ]
                                    ]
                                },
                                "sudo echo export awsRDS >> /etc/profile.d/envvariable.sh \n",
                                "sudo echo export bucketName >> /etc/profile.d/envvariable.sh \n",
                                "source /etc/profile.d/envvariable.sh \n",
                                "mkdir /home/ubuntu/webapp \n",
                                "iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j DNAT --to-destination :8080"
                            ]
                        ]
                    }
                }
            }
        },
        "webappsecuritygroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Fn::ImportValue": "csye6225-cloud-Networking-VPC-Id"
                },
                "GroupDescription": "Security group for web server",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 8080,
                        "ToPort": 8080,
                        "CidrIp": "0.0.0.0/0"   
                    }
                ]
            }
        },
        "dbsecuritygroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Fn::ImportValue": "csye6225-cloud-Networking-VPC-Id"
                },
                "GroupDescription": "Ec2 security group for DB",
                "SecurityGroupIngress": [
                    {
                        "SourceSecurityGroupId": {
                            "Ref": "webappsecuritygroup"
                        },
                        "FromPort": 3306,
                        "IpProtocol": "tcp",
                        "ToPort": 3306
                    }
                ]
            }
        },
        "rdsinstance": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "DBInstanceClass": "db.t2.medium",
                "AllocatedStorage": "20",
                "Engine": "MySQL",
                "MultiAZ": "false",
                "DBInstanceIdentifier": "csye6225-Spring2019",
                "MasterUsername": "csye6225master",
                "MasterUserPassword": "csye6225password",
                "DBSubnetGroupName": {
                    "Ref": "dbsubnetgroup"
                },
                "PubliclyAccessible": true,
                "DBName": "csye6225",
                "Port": "3306",
                "VPCSecurityGroups": [
                    {
                        "Ref": "dbsecuritygroup"
                    }
                ],
                "StorageType": "gp2"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "a853732c-f945-4991-8eb3-b467bf9cf322"
                }
            }
        }
    }
}
